--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -33,3 +33,10 @@
   display: flex;
   align-items: flex-end;
 }
+
+.search-conteiner{ 
+  margin-bottom: 30px;
+}
+.search-conteiner h1{ 
+  margin-bottom: 30px;
+}
